se agrego carpeta Migrations

--- a/CovidInfoWebService/CovidInfoWebService.csproj
+++ b/CovidInfoWebService/CovidInfoWebService.csproj
@@ -14,5 +14,9 @@
     <None Update="app.db" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 
 </Project>
