eliminacion de WeatherForecast

--- a/CovidInfoWebService/Properties/launchSettings.json
+++ b/CovidInfoWebService/Properties/launchSettings.json
@@ -20,7 +20,7 @@
     "CovidInfoWebService": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "api/reportecaso",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
